# twat-task

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP.txt  HISTORY.md  IMPLEMENTATION_SUMMARY.md  LOG.md  PLAN.md  README.md  REPO_CONTENT.txt  TODO.md  VERSION.txt  cleanup.py  llms.txt  pyproject.toml
.cursor/rules/: filetree.mdc
.github/workflows/: push.yml  release.yml
REVIEW/: FILES-cla.md  FILES-cod.md  TODO-cla.md  TODO-cod.md
examples/: testprefect_example.py
src/: testprefect.py
src/twat_pipeline/: __init__.py  __main__.py
src/twat_task/: __init__.py  __main__.py  task.py
tests/: test_flows.py  test_package.py  test_tasks.py  test_twat_task.py  test_video_transcript.py
